<resources>
    <string name="app_name">Exercises</string>
    <string name="name_of_ingredient">Name of Ingredient</string>
    <string name="date_purchased">Date Purchased</string>
    <string name="volume_measurement">Volume</string>
    <string name="quantity">Quantity</string>
    <string name="liked_by">Liked By</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="cocktail_planner">Cocktail Planner</string>
    <string name="ingredient_pantry">Ingredient Pantry</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="update_ingredient">Update Ingredient</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="enter_ingredients">Enter Ingredients</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="go_back">Go Back</string>
    <string name="save">Save</string>
    <string name="cocktail_library">Cocktail Library</string>
    <string name="all_cocktails">All Cocktails</string>
    <string name="favourite_cocktails">Favourite Cocktails</string>
    <string name="search_cocktails">Search Cocktails</string>
    <string name="search_all_cocktails">Search All Cocktails</string>
    <string name="cocktail_name">Cocktail Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="view_recipe">View Recipe</string>
    <string name="cocktail_recipe">Cocktail Recipe</string>
    <string name="cocktail_also_known_as">Cocktail Also Known As</string>
    <string name="instructions">Instructions</string>
    <string name="measure">Measure</string>
    <string name="ingredient">Ingredient</string>
    <string name="glass_type">Glass Type</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="select_date_purchased">Select Date Purchased</string>
    <string name="change_date_purchased">Change Date Purchased</string>
</resources>