<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".AddIngredient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_goBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_arrow_back_24"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"
            android:textAlignment="center"
            android:textColor="@color/dark_cream"
            android:textSize="40sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ingredientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:hint="@string/name_of_ingredient"
            android:textColorHint="@color/forest_green"
            android:background="@color/dark_cream"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_datePurchased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/dusky_rose"
            android:padding="15dp"
            android:text="@string/select_date_purchased"
            android:textAllCaps="false"
            android:textColor="@color/crimson"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/datePurchased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:hint="@string/date_purchased"
            android:textColorHint="@color/forest_green"
            android:background="@color/dark_cream"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:hint="@string/volume_measurement"
            android:textColorHint="@color/forest_green"
            android:background="@color/dark_cream"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:hint="@string/quantity"
            android:textColorHint="@color/forest_green"
            android:inputType="numberSigned"
            android:background="@color/dark_cream"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/likedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:hint="@string/liked_by"
            android:textColorHint="@color/forest_green"
            android:background="@color/dark_cream"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_addIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:backgroundTint="@color/dusky_rose"
            android:padding="15dp"
            android:text="@string/add_ingredient"
            android:textAllCaps="false"
            android:textColor="@color/crimson"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>