<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".UpdateIngredient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_goBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_ingredient"
            android:textAlignment="center"
            android:textColor="@color/dark_cream"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/name_of_ingredient"
            android:textColor="@color/dark_cream"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/db_ingredientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@color/dark_cream"
            android:hint="@string/name_of_ingredient"
            android:padding="5dp"
            android:textColorHint="@color/forest_green"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="15dp"
                    android:gravity="start"
                    android:text="@string/date_purchased"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/db_datePurchased"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:background="@color/dark_cream"
                    android:gravity="start"
                    android:padding="5dp"
                    android:textColorHint="@color/forest_green"
                    android:textSize="18sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_changeDatePurchased"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginHorizontal="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dusky_rose"
                android:padding="15dp"
                android:text="@string/change_date_purchased"
                android:textAllCaps="false"
                android:textColor="@color/crimson"
                android:textSize="18sp" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:text="@string/volume_measurement"
            android:textColor="@color/dark_cream"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/db_volume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@color/dark_cream"
            android:hint="@string/volume_measurement"
            android:padding="5dp"
            android:textColorHint="@color/forest_green"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/quantity"
            android:textColor="@color/dark_cream"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/db_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@color/dark_cream"
            android:hint="@string/quantity"
            android:inputType="numberSigned"
            android:padding="5dp"
            android:textColorHint="@color/forest_green"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/liked_by"
            android:textColor="@color/dark_cream"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/db_likedBy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:background="@color/dark_cream"
            android:hint="@string/liked_by"
            android:padding="5dp"
            android:textColorHint="@color/forest_green"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_updateIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/dusky_rose"
            android:paddingHorizontal="100dp"
            android:paddingVertical="15dp"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/crimson"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>