<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_listIngredients"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="15dp"
    android:layout_marginBottom="15dp"
    android:elevation="15dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/dark_cream"
        android:orientation="vertical"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/db_ingredientName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/ingredient_name"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/crimson"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/lbl_volume"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/volume_measurement"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>

            <TextView
                android:id="@+id/db_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/volume_measurement"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/lbl_quantity"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/quantity"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>

            <TextView
                android:id="@+id/db_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/quantity"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/lbl_datePurchased"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/date_purchased"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>

            <TextView
                android:id="@+id/db_datePurchased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/date_purchased"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/lbl_likedBy"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/liked_by"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>

            <TextView
                android:id="@+id/db_likedBy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/liked_by"
                android:textSize="18sp"
                android:textColor="@color/crimson"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="5dp">

            <Button
                android:id="@+id/btn_updateIngredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:backgroundTint="@color/dusky_rose"
                android:padding="15dp"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/crimson"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_deleteIngredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@color/dusky_rose"
                android:padding="15dp"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/crimson"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>