<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context=".CocktailRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/btn_goBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/tv_cocktailRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@color/dark_cream"
            android:textSize="45sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_cocktail"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:layout_marginVertical="15dp" />

                <TextView
                    android:id="@+id/tv_cocktailAKA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_ingredientsSubHeading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/ingredients"
                    android:textColor="@color/dark_cream"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_ingredient1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />


                <TextView
                    android:id="@+id/tv_ingredient2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_ingredient15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:text="@string/ingredient"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/tv_glassType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_instructionsHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/instructions"
                    android:textColor="@color/dark_cream"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_instructions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:textColor="@color/dark_cream"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btn_addToFavourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:backgroundTint="@color/dusky_rose"
                    android:padding="15dp"
                    android:text="@string/add_to_favourites"
                    android:textAllCaps="false"
                    android:textColor="@color/crimson"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/btn_removeFromFavourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="30dp"
                    android:backgroundTint="@color/dusky_rose"
                    android:padding="15dp"
                    android:text="@string/remove_from_favourites"
                    android:textAllCaps="false"
                    android:textColor="@color/crimson"
                    android:textSize="25sp"
                    android:visibility="gone" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>
